# onebird

./: Cargo.toml  README.md
onebird-agent-core/: Cargo.toml
onebird-agent-core/src/: agent.rs  lib.rs  llm.rs  loop.rs  types.rs
onebird-agent-core/tests/: basic_loop.rs  llm_routing.rs
onebird-cli/: Cargo.toml
onebird-cli/src/: main.rs
