[package]
name = "onebird-agent-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
rig-core = "0.32"
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"] }

